Webpack bundle refactor
* Split browser and node examples

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <!-- <script src='../dist/bundle.js'></script> -->
-  <script src='./bundle/bundle-rest.js'></script>
+  <!-- <script src='bundle/bundle-rest.js'></script> -->
+  <script src='bundle/bundle-ws.js'></script>
 </head>
 <body>
 </body>
