Renamed listWithdraws to WithdrawList

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
   <script src='bundle/balance.bundle.js'></script>
   <script src='bundle/deposits.bundle.js'></script>
   <script src='bundle/eventEmitters.bundle.js'></script>
-  <script src='bundle/listWithdraws.bundle.js'></script>
+  <script src='bundle/requestWithdrawList.bundle.js'></script>
   <script src='bundle/orderBookWebSocket.bundle.js'></script>
   <script src='bundle/tickerWebSocket.bundle.js'></script>
   <script src='bundle/tradeHistory.bundle.js'></script>
